# ChangeLog for media-tv/xbmc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $

*xbmc-12.2 (11 May 2013)

  11 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +files/xbmc-12.0-system-projectm.patch, +xbmc-12.2.ebuild, metadata.xml:
  Add ebuild for 12.2, based on xbmc-12.1-r1.ebuild.

  31 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Fix use_enable usb.

  21 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Use the Frodo branch for now.

  20 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Move "inherit git-2" to the same place as the upstream ebuild.

  30 Dec 2012; Stijn Tintel <stijn+gentoo@linux-ipv6.be>
  files/xbmc-9999-no-arm-flags.patch, files/xbmc-9999-nomythtv.patch:
  Updated live ebuild patches from upstream.

  30 Dec 2012; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Merge upstream ebuild changes.

  27 Nov 2009; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
  Based on xbmc-9999 from portage, with some modifications:
  * Currently builds from the pvr-testing branch
  * Also export SVN_REVISION as exported

*xbmc-9999-r1 (27 Nov 2009)