@@ -1,3 +1,3 @@
-DIST xbmc-12-libav.tar.xz 6080 SHA256 84ba05dc66a476d2cb940c10355a22a04c5ef3b4fd6bd96a87a1fb2ffa7ccc0c SHA512 cde76dd435fb449ec843aaaa41a46f0fb4efeeb753669f9e4d052c06f00fe512be9fe994d5dd56794f47ce2f49146a2782f2da72dd78a1f66e5f54ca15723f13 WHIRLPOOL 07ba9e3fb3a4ba6d2c52055bcbe52009a87363bc8e0b21ebc90965bd3562196eee728103028fe8baaad250def5c6f76616a19731f825955648df9ff01c905e6b
 DIST xbmc-12.2.tar.gz 67663000 SHA256 b2330634fc513d27a44b131bbbe4ca6b61d60a1fe6c7ca27a7dc749df0bcea1c SHA512 d6812886b4d1a5c28c8150b164d714f8855ccb1ac4e74811c9eb03d09e12a6f05bedd3c034132ae79e0bff66efd54ced9c2c1140da6b4ad7b82dbb90fa3d1c39 WHIRLPOOL c3fc97e5f45a38a259bca06af0b171630ac16832034410e45174d900358b1d16b72940b29475dcad72a2198d8722859a229152379ab7784a7d61f961eb261ddb
 DIST xbmc-9999-20121224-generated-addons.tar.xz 51980 SHA256 21284fe7ccee065eee10064f73a469722d6ffddf2fe882a0aefc07ea0eba0401 SHA512 48cdf8c685a48cd32462509962c888e8bc16254268d6fc891aacc5222da42e227ee5b6858c9e2b80d7d9fecc63862cd0c62c181a106212886a25f9be52778a1f WHIRLPOOL 12a31d33cc322b4afc3bdc829fc330a0971cab8a557a2f87885569d817a3664ae7506bfe7984322ec95b7786a246cd5edb10fceabfd96965ef33dd19cb934ae7
+DIST xbmc_backports-12-1.tar.bz2 5010 SHA256 a222c32f5a4a0a8690b1544674cfbfeddf81943e85b6ea716768b83c9eba5fa8 SHA512 19b29808f7a3a7b0642f8463bdd229041588d2f42952fe55a17ab69b5b259cde249eb763598893463218d0ab6c747bf3c81e045bdbf5655f9f5f2d2067cb35d2 WHIRLPOOL cc6870dabca8b53a1a6055a4218a8f9bbb2c031ab3b928040325fb121ea75ae6db431542660d28c3bc6900a904e2c0949d69651b2f63faffe8bc7f670d519f06
