@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $
 
+*xbmc-12.2-r2 (11 Jul 2013)
+
+  11 Jul 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  -xbmc-12.2.ebuild, +xbmc-12.2-r2.ebuild, metadata.xml:
+  Try at Samba4 compat.
+
 *xbmc-12.2 (11 May 2013)
 
   11 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
